_sass/website-left-navigation.scss
/*
 * Copyright (c) 2017-2019, FusionAuth, All Rights Reserved
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
 * either express or implied. See the License for the specific
 * language governing permissions and limitations under the License.
 */

@import 'mixins';
@import 'variables';
@import 'website-variables';


/* Left Navigation
–––––––––––––––––––––––––––––––––––––––––––––––––– */
section.account, section.docs {
  aside {
    width: 100%;

    > a {
      background: $gray-7;
      border-top: 1px solid $gray-6;
      color: white !important;
      display: block;
      font-weight: 600;
      padding: 10px 20px;
      text-decoration: none !important;
      width: 100%;

      @include media(lg) {
        display: none;
      }

      &.sub-menu {
        > i {
          margin-top: 3px;
        }
      }

      i {
        float: right;
      }
    }

    nav {
      background: $gray-1;
      display: none;
      margin: 0;
      padding: 0;
      width: 100%;

      @include media(lg) {
        border-radius: 0 5px 5px 0;
        display: block;
      }

      &.open {
        display: block;
      }

      // General for <nav> and <ul>
      li {
        &.open {
          background-color: darken($gray-1, 2.5%);

          li {
            &.active {
              background-color: darken($gray-1, 5%);
            }
          }

          > ul:first-of-type {
            display: block;
          }
        }
      }

      li:not(.open) {
        &:hover {
          background-color: darken($gray-1, 5%);
        }
      }

      a, a:hover, a:link, a:visited {
        border-left: 2px solid transparent;
        color: $gray-6;
        text-decoration: none;

        @include media(lg) {
          font-size: 13px;
        }
      }

      i {
        margin-right: 10px;
        padding-top: 3px;

        &.fa-chevron-down, &.fa-chevron-up {
          color: $gray-4;
          float: right;
        }
      }

      ul {
        list-style: none;
        margin: 0;
        padding: 0;

        hr {
          border-left: 1px solid transparent;
          border-top: 1px solid $gray-2;
          margin: 0;
          width: calc(100% - 2px);
        }

        li {
          &.active {
            a {
              border-left: 2px solid $orange-medium;
            }
          }

          &.search {
            padding: 10px;

            .search-field {
              @extend input, [type="text"];
              background: #fff;
              display: flex;
              padding: 7px;
              width: 100%;

              input {
                background: #fff;
                border: none;
                border-radius: 0;
                box-shadow: none;
                margin: 0;
                padding: 0;
                width: 100%;
              }
            }
          }

          a {
            display: block;
            padding: 10px;
          }

          ul {
            display: none;

            li {
              a {
                padding-left: 35px;
              }

              li a {
                padding-left: 60px;
              }
            }
          }
        }

        ul {
          li:last-of-type {
            padding-bottom: 0;
          }
        }
      }
    }
  }

  /* Account overrides */
  &.account {
    aside {
      nav {
        background: darken($gray-1, 2%);

        li {
          &.active {
            background-color: darken($gray-1, 10%);
          }
        }

        li:not(.open) {
          &:hover {
            background-color: darken($gray-1, 7%);
          }
        }
      }
    }
  }
}

